# arcanaglyph

./: .arcanacodex-arch.toml  .env.example  .gitignore  .gitlab-ci.yml  .taplo.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  INBOX.md  Makefile  README.md  README.public.md  Roadmap.md  add_hotkeys.bash  install.ps1  install.sh  uninstall.sh
.github/workflows/: macos-test.yml  release.yml
assets/: arcanaglyph.desktop
assets/scripts/: arcanaglyph-appimage-AppRun.sh  arcanaglyph-wrapper.sh
crates/arcanaglyph-app/: Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
crates/arcanaglyph-app/capabilities/: default.json
crates/arcanaglyph-app/icons/: icon.icns
crates/arcanaglyph-app/src/: build.rs  main.rs  net.rs  tray.rs  updater.rs
crates/arcanaglyph-app/src/commands/: config_history.rs  engine.rs  hotkeys.rs  mod.rs  platform.rs  updater_cmds.rs  widget_ext.rs
crates/arcanaglyph-app/src/models/: download.rs  installed.rs  mod.rs  registry.rs
crates/arcanaglyph-app/src/setup/: app_setup.rs  bootstrap.rs  events.rs  macos_permissions.rs  mod.rs
crates/arcanaglyph-core/: Cargo.toml
crates/arcanaglyph-core/src/: audio.rs  config.rs  db.rs  engine.rs  error.rs  event.rs  history.rs  input.rs  lib.rs  main.rs  transcriber.rs
crates/arcanaglyph-core/src/dsp/: mod.rs  preprocess.rs  spectral.rs
crates/arcanaglyph-core/src/engine/: lru.rs  mod.rs  record_session.rs
crates/arcanaglyph-core/src/gigaam/: mel.rs  mod.rs  transcriber.rs  transcriber_rnnt.rs  transcriber_tract.rs
crates/arcanaglyph-core/src/qwen3asr/: mel.rs  mod.rs  transcriber.rs
crates/arcanaglyph-core/src/transcriber/: mod.rs  vosk.rs  whisper.rs
crates/arcanaglyph-core/src/transcription_models/: gigaam_v3_fp32_speech_model.rs  gigaam_v3_rnnt_speech_model.rs  gigaam_v3_speech_model.rs  mod.rs  qwen3_asr_speech_model.rs  vosk_russian_speech_model.rs  whisper_large_v3_turbo_speech_model.rs  whisper_tiny_speech_model.rs
dev-notes/windows-port/: CHECKLIST.md  PLAN.md
extension/arcanaglyph-widget@arfi.tech/: extension.js  metadata.json
extension/arcanaglyph-widget@arfi.tech/schemas/: gschemas.compiled  org.gnome.shell.extensions.arcanaglyph-widget.gschema.xml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  widget.html
frontend/public/: i18n.js
frontend/src/: global.d.ts  main.ts  test-setup.ts
frontend/src/app/: init.ts
frontend/src/entities/config/: types.ts
frontend/src/entities/model/: api.test.ts  api.ts  types.ts
frontend/src/entities/recording/: types.ts
frontend/src/entities/transcription/: types.ts
frontend/src/features/history-export/: history-export.test.ts  history-export.ts
frontend/src/features/hotkey-config/: hotkey-config.test.ts  hotkey-config.ts
frontend/src/features/model-management/: model-cards.test.ts  model-cards.ts
frontend/src/features/page-navigation/: page-navigation.test.ts  page-navigation.ts
frontend/src/features/settings/: engine-availability.test.ts  engine-availability.ts  load-config.ts  mic-device.test.ts  mic-device.ts  save-config.test.ts  save-config.ts  settings.ts  state.ts
frontend/src/pages/about/: about.test.ts  about.ts
frontend/src/pages/history/: history-page.test.ts  history-page.ts  render.test.ts  render.ts
frontend/src/shared/lib/: i18n.test.ts  i18n.ts  tauri.test.ts  tauri.ts
frontend/src/shared/ui/: confirm.test.ts  confirm.ts  custom-select.test.ts  custom-select.ts  dropdown.ts  toast.test.ts  toast.ts
frontend/src/widgets/main-controls/: main-controls.test.ts  main-controls.ts
frontend/src/widgets/model-badge/: model-badge.test.ts  model-badge.ts
frontend/src/widgets/portal-banner/: portal-banner.test.ts  portal-banner.ts
frontend/src/widgets/titlebar/: titlebar.test.ts  titlebar.ts
frontend/src/widgets/update-banner/: update-banner.test.ts  update-banner.ts
migrations/: v001_initial_schema.sql  v002_settings_table.sql
scripts/: ag-pause  ag-trigger  build-deb.sh  ci-prepare-appimage-tools.sh  prepare-bundled-libs.sh  run-dev.sh
scripts/legacy/: ag-trigger.bash  install_libvosk.bash  zzz.bash
