# crates/arcanaglyph-app/Cargo.toml

[package]
name = "arcanaglyph-app"
version = "1.3.5"
edition = "2024"
build = "src/build.rs"

[[bin]]
name = "arcanaglyph"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
arcanaglyph-core = { path = "../arcanaglyph-core" }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.41"
chrono = "0.4"
base64 = "0.22"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
dirs = "6"

[features]
default = []
cuda = ["arcanaglyph-core/cuda"]
