# crates/arcanaglyph-core/Cargo.toml

[package]
name = "arcanaglyph-core"
version = "1.0.0"
edition = "2024"

[lib]
name = "arcanaglyph_core"
path = "src/lib.rs"

[[bin]]
name = "arcanaglyph-core"
path = "src/main.rs"

[dependencies]
cpal = "0.16.0"
vosk = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tungstenite = "0.27.0"
futures-util = "0.3.31"
tokio-tungstenite = "0.27.0"
enigo = "0.3"
whisper-rs = { version = "0.13", features = ["whisper-cpp-log"] }
ashpd = { version = "0.13", features = ["remote_desktop", "screencast"] }
toml = "0.8"
directories = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
ndarray = "0.17"
rustfft = "6"
tokenizers = "0.21"
